<resources>
    <string name="app_name">Test Fish MarketPlace</string>
    <string name="order_existing">Current</string>
    <string name="order_new">New</string>
    <string name="order_past">Past</string>
    <string name="orders">Orders</string>
    <string name="order_existing_label">Live Inventory</string>
    <string name="order_new_label">Create new Listing</string>
    <string name="order_past_label">Past Inventory</string>
    <string name="search_hint">Search by name</string>
    <string name="creator_size_small">Small</string>
    <string name="creator_size_medium">Medium</string>
    <string name="creator_size_large">Large</string>
    <string name="label_weight">How much fish are you selling? (Weight in Kg)</string>
    <string name="label_price">What is the price you want to set? (Price in Rs/Kg)</string>
    <string name="catch_location">Fishing location</string>
    <string name="sell_location">Pickup address</string>
    <string name="label_catch_time">When was the fish caught?</string>
    <string name="label_catch_location">Where was the fish caught?</string>
    <string name="label_sell_location">Where should the customer pick up the fish?</string>
    <string name="anchovy">Anchovy</string>
    <string name="bombay_duck">Bombay Duck</string>
    <string name="giant_sea_perch">Giant Sea Perch</string>
    <string name="sole">Sole</string>
    <string name="pomfret">Pomfret</string>
    <string name="salmon">Indian Salmon</string>
    <string name="kingfish">Kingfish</string>
    <string name="red_snapper">Red Snapper</string>
    <string name="grouper">Grouper</string>
    <string name="tuna">Tuna</string>
    <string name="peral_spot">Pearl Spot</string>
    <string name="ladyfish">Lady Fish</string>
    <string name="hilsa">Hilsa</string>
    <string name="mackerel">Indian Mackerel</string>
    <string name="black_pomfret">Black Pomfret</string>
    <string name="mullet">Flathead Grey Mullet</string>
    <string name="sardine">Indian Oil Sardine</string>
    <string name="croaker">Croaker</string>
    <string name="shark">Sharks</string>
    <string name="ray">Rays</string>
    <string name="ghole">Ghole</string>
    <string name="murrel">Murrel</string>
    <string name="seerfish">Seerfish</string>
    <string name="sea_veral">Sea Veral</string>
    <string name="squid">Squid</string>
    <string name="tiger_prawn">Tiger prawn</string>
    <string name="prawns">Prawns</string>
    <string name="shrimp">Shrimp</string>
    <string name="lobster">Spiny Lobster</string>
    <string name="crab">Mud Crab</string>
    <string name="short_necked_clams">Short neck clams</string>
    <string name="mussels">Mussels</string>
    <string name="mahi_mahi">Mahi Mahi</string>
    <string name="coconut_para">Coconut para</string>
    <string name="anchovy_common_name">Indian anchovy</string>
    <string name="bombay_duck_common_name">Bombay Duck</string>
    <string name="giant_sea_perch_common_name">Bhekti/ Seabass</string>
    <string name="sole_common_name">Malabar Sole/Soles</string>
    <string name="pomfret_common_name">Silver pomfret</string>
    <string name="salmon_common_name">Indian Salmon</string>
    <string name="kingfish_common_name">Black kingfish/Cobia</string>
    <string name="red_snapper_common_name">Red Snapper</string>
    <string name="grouper_common_name">Grouper</string>
    <string name="tuna_common_name">Yellowfin tuna</string>
    <string name="peral_spot_common_name">Pearl Spot</string>
    <string name="ladyfish_common_name">Kane fish</string>
    <string name="hilsa_common_name">Hilsa shad</string>
    <string name="mackerel_common_name">Indian Mackerel</string>
    <string name="black_pomfret_common_name">Black Pomfret</string>
    <string name="mullet_common_name">Mullet</string>
    <string name="sardine_common_name">Oil Sardine</string>
    <string name="croaker_common_name">Croaker</string>
    <string name="shark_common_name">Sharks</string>
    <string name="ray_common_name">Rays</string>
    <string name="ghole_common_name">Ghol</string>
    <string name="murrel_common_name">Snake head/Murrel</string>
    <string name="seerfish_common_name">King seer</string>
    <string name="sea_veral_common_name">Greater lizard fish</string>
    <string name="squid_common_name">Indian Squid</string>
    <string name="tiger_prawn_common_name">Jumbo tiger</string>
    <string name="prawns_common_name">Prawns</string>
    <string name="shrimp_common_name">Shrimp</string>
    <string name="lobster_common_name">Rock lobster</string>
    <string name="crab_common_name">Mud/swim crab</string>
    <string name="short_necked_clams_common_name">Black/shortneck clam</string>
    <string name="mussels_common_name">Green mussel</string>
    <string name="mahi_mahi_common_name">Mahi Mahi</string>
    <string name="coconut_para_common_name">Talang queenfish</string>
    <string name="anchovy_scientific_name">Stolephorus indicus</string>
    <string name="bombay_duck_scientific_name">Harpadon nehereus</string>
    <string name="giant_sea_perch_scientific_name">Lates calcarifer</string>
    <string name="sole_scientific_name">Brachiurus panoides</string>
    <string name="pomfret_scientific_name">Pampus argenteus</string>
    <string name="salmon_scientific_name">Eleutheronema tetradactylum</string>
    <string name="kingfish_scientific_name">Rachycentron canadum</string>
    <string name="red_snapper_scientific_name">Lutjanus spp.</string>
    <string name="grouper_scientific_name">Epinephelus spp.</string>
    <string name="tuna_scientific_name">Tunas - Thunnus albacares</string>
    <string name="peral_spot_scientific_name">Etroplus suratensis</string>
    <string name="ladyfish_scientific_name">Sillago sihama</string>
    <string name="hilsa_scientific_name">Tenualosa ilisha</string>
    <string name="mackerel_scientific_name">Rastrelliger kanagurta</string>
    <string name="black_pomfret_scientific_name">Parastromateus niger</string>
    <string name="mullet_scientific_name">Mugil cephalus</string>
    <string name="sardine_scientific_name">Sardinella longiceps</string>
    <string name="croaker_scientific_name">Otolithes/Johnius/Johniops</string>
    <string name="shark_scientific_name">Sharks</string>
    <string name="ray_scientific_name">Rays</string>
    <string name="ghole_scientific_name">Protonibea diacanthus</string>
    <string name="murrel_scientific_name">Chamna striata</string>
    <string name="seerfish_scientific_name">Scomberomorus commerson</string>
    <string name="sea_veral_scientific_name">Saurida tumbil</string>
    <string name="squid_scientific_name">Uroteuthis duvauceli</string>
    <string name="tiger_prawn_scientific_name">P. monodon</string>
    <string name="prawns_scientific_name">Penaeus Spp</string>
    <string name="shrimp_scientific_name">Non penaeid</string>
    <string name="lobster_scientific_name">Panulirus polyphagus/ P homarus</string>
    <string name="crab_scientific_name">Scylla/Portunus Spp</string>
    <string name="short_necked_clams_scientific_name">Villorita/Paphia</string>
    <string name="mussels_scientific_name">Perna virids</string>
    <string name="mahi_mahi_scientific_name">Coryphena hippures</string>
    <string name="coconut_para_scientific_name">Scombroides commersonias</string>
    <string name="anchovy_description">These are a small silvery fish that grow to a length of 12-15cm. They found in the Indo- Pacific region. They are a schooling species, occurring in coastal waters and are also known to enter estuaries. They feed mostly on zooplankton.  Nutritionally anchovies are an excellent source of calcium, iron and zinc.
    </string>
    <string name="bombay_duck_description">Bombay duck despite its name, is not a duck but a lizardfish. Adult fish grow to a length of 25–40cm.  They inhabit the waters of the western Indo- Pacific region. They are mostly found in deep offshore waters but gather near rivers during the monsoons. These fish are marketed fresh, dried or salted. Bombay ducks are a good source of vitamin B6 and B3 (Niacin).  </string>
    <string name="giant_sea_perch_description">Giant sea Perch or Barramundi is widely distributed in the western Indo– Pacific region. They grow to a length of 150–200cm.These fish inhabit rivers before returning to more saline ocean waters to spawn. Nutritionally this species is packed with omega-3 fatty acids that help promote brain and cardiovascular health. </string>
    <string name="sole_description">Sole fish is a flatfish, and as the name implies, it has an unusual flat body shape which makes the species suited for life on the ocean floor. In India there are numerous species that are sold under the common name sole fish, includingCynoglossus spp. These fish are an excellent source of protein, calcium and selenium.  </string>
    <string name="pomfret_description">Silver or white pomfret is a species of butterfish that is found widely in the Western Indo–Pacific region. They grow to a length of 30–60cm. The species is characterised by its flat body and forked tail. They are usually found in schools over muddy bottoms, and they feed on zooplankton. Nutritionally this fish is rich in vitamins and minerals such as vitamin D and vitamin B12. </string>
    <string name="salmon_description">Indian Salmon or Rawas as it is commonly called is found in the western Indo– Pacific region. These fish grow to a length of 50–200cm. They form loose schools, although adults are often observed in pairs. They are a carnivorous species feeding on prawns, fish and occasionally on polychaete worms. The flesh of this species is oily and is rich in omega- 3, Vitamin A and Vitamin D. </string>
    <string name="kingfish_description">King fish are a large fast swimming pelagic fish. They are mostly a solitary species, that hunts in shallow waters, feeding on small fish species like anchovies, carangids, clupeids, squid and shrimp.  In India the common name of kingfish is given to multiple species of fish including Rachycentroncanadum and Scomberomoruscommerson. King fish is an excellent source of vitamin A and vitamin B12.  </string>
    <string name="red_snapper_description">Red snapper has a rosy pink colour that fades to a pale underbelly. They are found in the western Indo–Pacific region. They can grow to a length of 80–150cm. Juveniles are found in mangroves, while the adults eventually migrate offshore to deep reefs. Red snapper is a good source of vitamin B12. </string>
    <string name="grouper_description">In India the species of the genus Epinephelus of the family Serranidae together comprise the groupers found. They are mostly associated with coral reefs or rocky shores. Nutritionally these fish are a good source of vitamin B6, vitamin B12, Phosphorus, Potassium and Selenium.  </string>
    <string name="tuna_description">Yellowfin tuna</string>
    <string name="peral_spot_description">Pearl spot or Kalundar has an elliptical body shape with tiny spots all over. They are found in the western Indian Ocean: India and Sri Lanka. A fully–grown pearl spot is 20–40cm in length. They are primarily found in brackish waters, but are known to tolerate fresh or marine waters as well. These fish are considered as a delicacy in many parts of India and are a good source of fatty acids which help regulate blood pressure.  </string>
    <string name="conservation_status">Fishery Status</string>
    <string name="label_size">What is the average size of the fish?</string>
    <string name="creator_next">Next</string>
    <string name="creator_prev">Back</string>
    <string name="create_listing">Create</string>
    <string name="label_create_confirm">Does everything look ok?</string>
    <string name="size">Size</string>
</resources>