<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/species_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/padding_triple"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@id/name"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_half"
        android:ellipsize="end"
        android:gravity="center"
        android:lines="1"
        android:textSize="@dimen/large_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/kname"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/species_image" />


    <TextView
        android:id="@+id/kname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_half"
        android:ellipsize="end"
        android:gravity="center"
        android:lines="1"
        android:textSize="@dimen/large_text_size"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@id/pager"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <TextView
        android:id="@+id/conservation_status_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_double"
        android:text="@string/conservation_status"
        android:textColor="@color/black"
        android:textSize="@dimen/large_text_size"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/kname"
        tools:text="WTF" />


    <TextView
        android:id="@+id/conservation_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_double"
        android:gravity="right"
        android:textAlignment="gravity"
        android:textColor="@color/black"
        android:textSize="@dimen/large_text_size"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/conservation_status_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/conservation_status_label"
        tools:text="WTF" />

    <ScrollView
        android:id="@+id/desc_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/padding_double"
        app:layout_constraintBottom_toTopOf="@id/unavailable"
        app:layout_constraintTop_toBottomOf="@id/conservation_status_label">

        <TextView
            android:id="@+id/desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textSize="@dimen/xlarge_text_size"
            android:visibility="gone"
            tools:text="WTF" />
    </ScrollView>


    <Button
        android:id="@+id/unavailable"
        style="@style/ButtonRed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_double"
        android:ellipsize="end"
        android:text="Prohibited for sale!"
        android:textSize="@dimen/xlarge_text_size"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/desc_container"
        tools:text="WTF" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/padding_triple"
        app:cardCornerRadius="@dimen/padding_double"
        app:cardElevation="@dimen/padding_standard"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toTopOf="@id/next"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/kname" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/padding_triple"
        android:visibility="gone"
        app:cardCornerRadius="@dimen/padding_double"
        app:cardElevation="@dimen/padding_standard"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toTopOf="@id/next"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ViewFlipper

            android:id="@+id/view_flipper"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/padding_standard"
        android:layout_marginBottom="@dimen/padding_triple"
        android:paddingLeft="@dimen/padding_double"
        android:paddingRight="@dimen/padding_double"
        android:text="@string/creator_prev"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/xlarge_text_size"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/next" />

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_standard"
        android:layout_marginBottom="@dimen/padding_triple"
        android:paddingLeft="@dimen/padding_double"
        android:paddingRight="@dimen/padding_double"
        android:text="@string/creator_next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/xlarge_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/prev"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_standard"
        android:layout_marginBottom="@dimen/padding_triple"
        android:paddingLeft="@dimen/padding_double"
        android:paddingRight="@dimen/padding_double"
        android:text="@string/create_listing"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/xlarge_text_size"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/prev"
        app:layout_constraintRight_toRightOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/pager"
        app:layout_constraintLeft_toLeftOf="@id/pager"
        app:layout_constraintRight_toRightOf="@id/pager"
        app:layout_constraintTop_toTopOf="@id/pager" />


</androidx.constraintlayout.widget.ConstraintLayout>