<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_double"
        android:gravity="center"
        android:text="@string/label_create_confirm"
        android:textAlignment="gravity"
        android:textColor="@color/black"
        android:textSize="@dimen/xlarge_text_size"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_double"
        android:text="@string/size"
        android:textColor="@color/black"
        android:textSize="@dimen/medium_text_size"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/size" />

    <TextView
        android:id="@+id/size"
        android:layout_width="0dp"
        app:layout_constraintVertical_chainStyle="spread"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_double"
        android:layout_marginTop="@dimen/padding_double"
        android:layout_marginRight="@dimen/padding_double"
        android:gravity="right"
        android:textAlignment="gravity"
        android:textColor="@color/black"
        android:textSize="@dimen/medium_text_size"
        app:layout_constraintBottom_toTopOf="@id/quantity"
        app:layout_constraintLeft_toLeftOf="@id/labels_right"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label"
        tools:text="sss" />

    <TextView
        android:id="@+id/label_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_double"
        android:text="Quantity"
        android:textColor="@color/black"
        android:textSize="@dimen/medium_text_size"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/quantity" />

    <TextView
        android:id="@+id/quantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_double"
        app:layout_constraintVertical_chainStyle="spread"
        android:layout_marginRight="@dimen/padding_double"
        android:gravity="right"
        android:textAlignment="gravity"
        android:textColor="@color/black"
        android:textSize="@dimen/medium_text_size"
        app:layout_constraintBottom_toTopOf="@id/cost"
        app:layout_constraintLeft_toLeftOf="@id/labels_right"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/size"
        tools:text="sss" />

    <TextView
        android:id="@+id/label_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_double"
        android:text="Cost"
        android:textColor="@color/black"
        android:textSize="@dimen/medium_text_size"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/cost" />

    <TextView
        android:id="@+id/cost"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_double"
        app:layout_constraintVertical_chainStyle="spread"
        android:layout_marginRight="@dimen/padding_double"
        android:gravity="right"
        android:textAlignment="gravity"
        android:textColor="@color/black"
        android:textSize="@dimen/medium_text_size"
        app:layout_constraintBottom_toTopOf="@id/time"
        app:layout_constraintLeft_toLeftOf="@id/labels_right"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quantity"
        tools:text="sss" />


    <TextView
        android:id="@+id/label_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_double"
        android:text="Catch time"
        android:textColor="@color/black"
        android:textSize="@dimen/medium_text_size"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/time" />

    <TextView
        android:id="@+id/time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_double"
        app:layout_constraintVertical_chainStyle="spread"
        android:layout_marginRight="@dimen/padding_double"
        android:gravity="right"
        android:textAlignment="gravity"
        android:textColor="@color/black"
        android:textSize="@dimen/medium_text_size"
        app:layout_constraintBottom_toTopOf="@id/catch_location"
        app:layout_constraintLeft_toLeftOf="@id/labels_right"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cost"
        tools:text="sss" />

    <TextView
        android:id="@+id/label_catch_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_double"
        android:text="@string/catch_location"
        android:textColor="@color/black"
        android:textSize="@dimen/medium_text_size"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/catch_location" />

    <TextView
        android:id="@+id/catch_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_double"
        app:layout_constraintVertical_chainStyle="spread"
        android:layout_marginRight="@dimen/padding_double"
        android:ellipsize="end"
        android:gravity="right"
        android:maxLines="2"
        android:textAlignment="gravity"
        android:textColor="@color/black"
        android:textSize="@dimen/medium_text_size"
        app:layout_constraintBottom_toTopOf="@id/sell_location"
        app:layout_constraintLeft_toLeftOf="@id/labels_right"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/time"
        tools:text="sss" />

    <TextView
        android:id="@+id/label_sell_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_double"
        android:text="@string/sell_location"
        android:textColor="@color/black"
        android:textSize="@dimen/medium_text_size"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/sell_location" />

    <TextView
        android:id="@+id/sell_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_double"
        app:layout_constraintVertical_chainStyle="spread"
        android:layout_marginRight="@dimen/padding_double"
        android:layout_marginBottom="@dimen/padding_double"
        android:ellipsize="end"
        android:gravity="right"
        android:maxLines="2"
        android:textAlignment="gravity"
        android:textColor="@color/black"
        android:textSize="@dimen/medium_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/labels_right"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/catch_location"
        tools:text="sss" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/labels_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="right"
        app:constraint_referenced_ids="label_cost,label_quantity,label_sell_location,label_time,label_size,label_catch_location" />

</androidx.constraintlayout.widget.ConstraintLayout>